5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1756_1576.log
== TEST (2019-05-22 15:05:43) 
-- CODE:
from numpy import*

e= array(eval(input()))
b= array(eval(input()))
p=11
pl=22
t=33

if (e==p) and (b==pl):
	print("BARSANULFO")
elif (e==p) and (b==t):
	print("BARSANULFO")
elif (e==pl) and (b==p):
	print("EUSAPIA")
elif (e==pl) and (b==t):
	print("BARSANULFO")
elif (e==t) and (b==p):
	print("EUSAPIA")
elif (e==t) and (b==pl):
	print("EUSAPIA")
elif (e==p) and (b==pl):
	print("BARSANULFO")
else:
	print("EMPATE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:06:15) 
-- CODE:
from numpy import*

p=11
pl=22
t=33
e= array(eval(input()))
b= array(eval(input()))

if (e==p) and (b==pl):
	print("BARSANULFO")
elif (e==p) and (b==t):
	print("BARSANULFO")
elif (e==pl) and (b==p):
	print("EUSAPIA")
elif (e==pl) and (b==t):
	print("BARSANULFO")
elif (e==t) and (b==p):
	print("EUSAPIA")
elif (e==t) and (b==pl):
	print("EUSAPIA")
elif (e==p) and (b==pl):
	print("BARSANULFO")
else:
	print("EMPATE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:06:25) 
-- CODE:
from numpy import*

p=11
pl=22
t=33
e= array(eval(input()))
b= array(eval(input()))

if (e==p) and (b==pl):
	print("BARSANULFO")
elif (e==p) and (b==t):
	print("BARSANULFO")
elif (e==pl) and (b==p):
	print("EUSAPIA")
elif (e==pl) and (b==t):
	print("BARSANULFO")
elif (e==t) and (b==p):
	print("EUSAPIA")
elif (e==t) and (b==pl):
	print("EUSAPIA")
elif (e==p) and (b==pl):
	print("BARSANULFO")
else:
	print("EMPATE")

-- EXECUTION TIME:
0.45048
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 9, in <module>
    if (e==p) and (b==pl):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:06:32) 
-- CODE:
from numpy import*

p=11
pl=22
t=33
e= array(eval(input()))
b= array(eval(input()))

if (e==p) and (b==pl):
	print("BARSANULFO")
elif (e==p) and (b==t):
	print("BARSANULFO")
elif (e==pl) and (b==p):
	print("EUSAPIA")
elif (e==pl) and (b==t):
	print("BARSANULFO")
elif (e==t) and (b==p):
	print("EUSAPIA")
elif (e==t) and (b==pl):
	print("EUSAPIA")
elif (e==p) and (b==pl):
	print("BARSANULFO")
else:
	print("EMPATE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 14:22:05) 
-- CODE:
from numpy import*

p=11
pl=22
t=33
c=0
r=0
w=0
e= array(eval(input()))
b= array(eval(input()))

while (e==p) and (b==pl):
	c= c+1
	b=b+1
	
-- EXECUTION TIME:
0.452634
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 12, in <module>
    while (e==p) and (b==pl):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:45:17) 
-- CODE:
from numpy import*

c=0 #posicaodosvetores
r=0 #vitoriadaeusapia
w=0 #vitoriasdebarsanulfo
e= array(eval(input()))
b= array(eval(input()))

while (e==b):
	print("EMPATE")
	if (e[0]==b[0]) and (e[1]==b[1]) and (e[2]<=b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	if (e[0]==b[0]) and (e[1]<=b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]<=b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]=>b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]=>b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]==b[1]) and (e[2]=>b[2]):
		c=c+1
		r=r+1
		print(c)
		print("EUSAPIA")
	
-- ERROR:
File "XXXX", line 23
    elif (e[0]=>b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:45:50) 
-- CODE:
from numpy import*

c=0 #posicaodosvetores
r=0 #vitoriadaeusapia
w=0 #vitoriasdebarsanulfo
e= array(eval(input()))
b= array(eval(input()))

while (e==b):
	print("EMPATE")
	if (e[0]==b[0]) and (e[1]==b[1]) and (e[2]<=b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]==b[0]) and (e[1]<=b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]<=b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]=>b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]=>b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]==b[1]) and (e[2]=>b[2]):
		c=c+1
		r=r+1
		print(c)
		print("EUSAPIA")
	
-- ERROR:
File "XXXX", line 23
    elif (e[0]=>b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:46:11) 
-- CODE:
from numpy import*

c=0 #posicaodosvetores
r=0 #vitoriadaeusapia
w=0 #vitoriasdebarsanulfo
e= array(eval(input()))
b= array(eval(input()))

while (e==b):
	print("EMPATE")
	if (e[0]==b[0]) and (e[1]==b[1]) and (e[2]<=b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]==b[0]) and (e[1]<=b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]<=b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]=>b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]=>b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]==b[1]) and (e[2]=>b[2]):
		c=c+1
		r=r+1
		print(c)
		print("EUSAPIA")
	
-- ERROR:
File "XXXX", line 23
    elif (e[0]=>b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:46:27) 
-- CODE:
from numpy import*

c=0 #posicaodosvetores
r=0 #vitoriadaeusapia
w=0 #vitoriasdebarsanulfo
e= array(eval(input()))
b= array(eval(input()))

while (e==b):
	print("EMPATE")
	if (e[0]==b[0]) and (e[1]==b[1]) and (e[2]<=b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]==b[0]) and (e[1]<=b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]<=b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]=>b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]=>b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]==b[1]) and (e[2]=>b[2]):
		c=c+1
		r=r+1
		print(c)
		print("EUSAPIA")
	
-- ERROR:
File "XXXX", line 23
    elif (e[0]=>b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:46:48) 
-- CODE:
from numpy import*

c=0 #posicaodosvetores
r=0 #vitoriadaeusapia
w=0 #vitoriasdebarsanulfo
e= array(eval(input()))
b= array(eval(input()))

while (e==b):
	print("EMPATE")
	if (e[0]==b[0]) and (e[1]==b[1]) and (e[2]<=b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]==b[0]) and (e[1]<=b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]<=b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]=>b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]=>b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]==b[1]) and (e[2]=>b[2]):
		c=c+1
		r=r+1
		print(c)
		print("EUSAPIA")
	
-- ERROR:
File "XXXX", line 23
    elif (e[0]=>b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:47:04) 
-- CODE:
from numpy import*

c=0 #posicaodosvetores
r=0 #vitoriadaeusapia
w=0 #vitoriasdebarsanulfo
e= array(eval(input()))
b= array(eval(input()))

while (e==b):
	print("EMPATE")
	if (e[0]==b[0]) and (e[1]==b[1]) and (e[2]<=b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]==b[0]) and (e[1]<=b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]<=b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]>=b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]=>b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]==b[1]) and (e[2]=>b[2]):
		c=c+1
		r=r+1
		print(c)
		print("EUSAPIA")
	
-- ERROR:
File "XXXX", line 27
    elif (e[0]==b[0]) and (e[1]=>b[1]) and (e[2]==b[2]):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:47:16) 
-- CODE:
from numpy import*

c=0 #posicaodosvetores
r=0 #vitoriadaeusapia
w=0 #vitoriasdebarsanulfo
e= array(eval(input()))
b= array(eval(input()))

while (e==b):
	print("EMPATE")
	if (e[0]==b[0]) and (e[1]==b[1]) and (e[2]<=b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]==b[0]) and (e[1]<=b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]<=b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]>=b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]>=b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]==b[1]) and (e[2]>=b[2]):
		c=c+1
		r=r+1
		print(c)
		print("EUSAPIA")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:48:33) 
-- CODE:
from numpy import*

c=0 #posicaodosvetores
r=0 #vitoriadaeusapia
w=0 #vitoriasdebarsanulfo
e= array(eval(input()))
b= array(eval(input()))

while (a.all(e)==a.all(b)):
	print("EMPATE")
	if (e[0]==b[0]) and (e[1]==b[1]) and (e[2]<=b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]==b[0]) and (e[1]<=b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]<=b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]>=b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]>=b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]==b[1]) and (e[2]>=b[2]):
		c=c+1
		r=r+1
		print(c)
		print("EUSAPIA")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:48:49) 
-- CODE:
from numpy import*

c=0 #posicaodosvetores
r=0 #vitoriadaeusapia
w=0 #vitoriasdebarsanulfo
e= array(eval(input()))
b= array(eval(input()))

while (a.all(e)==a.all(b)):
	print("EMPATE")
	if (e[0]==b[0]) and (e[1]==b[1]) and (e[2]<=b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]==b[0]) and (e[1]<=b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]<=b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]>=b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]>=b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]==b[1]) and (e[2]>=b[2]):
		c=c+1
		r=r+1
		print(c)
		print("EUSAPIA")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:49:29) 
-- CODE:
from numpy import*

c=0 #posicaodosvetores
r=0 #vitoriadaeusapia
w=0 #vitoriasdebarsanulfo
e= array(eval(input()))
b= array(eval(input()))

while (all(e)==all(b)):
	print("EMPATE")
	if (e[0]==b[0]) and (e[1]==b[1]) and (e[2]<=b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]==b[0]) and (e[1]<=b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]<=b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]>=b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]>=b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]==b[1]) and (e[2]>=b[2]):
		c=c+1
		r=r+1
		print(c)
		print("EUSAPIA")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:50:59) 
-- CODE:
from numpy import*

c=0 #posicaodosvetores
r=0 #vitoriadaeusapia
w=0 #vitoriasdebarsanulfo
e= array(eval(input()))
b= array(eval(input()))

while (all(e)==all(b)):
	c=c+1
	print("EMPATE")
	if (e[0]==b[0]) and (e[1]==b[1]) and (e[2]<=b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]==b[0]) and (e[1]<=b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]<=b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]>=b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]>=b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]==b[1]) and (e[2]>=b[2]):
		c=c+1
		r=r+1
		print(c)
		print("EUSAPIA")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:53:29) 
-- CODE:
from numpy import*

c=0 #posicaodosvetores
r=0 #vitoriadaeusapia
w=0 #vitoriasdebarsanulfo
e= array(eval(input()))
b= array(eval(input()))

while (all(e)==all(b)):
	c=c+1
	r=r+1
	w=w+1
	print("EMPATE")
	if (e[0]==b[0]) and (e[1]==b[1]) and (e[2]<=b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]==b[0]) and (e[1]<=b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]<=b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		w=w+1
		print("BARSANULFO")
	elif (e[0]>=b[0]) and (e[1]==b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]>=b[1]) and (e[2]==b[2]):
		c=c+1
		r=r+1
		print("EUSAPIA")
	elif (e[0]==b[0]) and (e[1]==b[1]) and (e[2]>=b[2]):
		c=c+1
		r=r+1
		print(c)
		print("EUSAPIA")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:12:40) 
-- CODE:
from numpy import*

c=0 #posicaodosvetores
r=0 #vitoriadaeusapia
w=0 #vitoriasdebarsanulfo
e= array(eval(input()))
b= array(eval(input()))

while (c< size(e)):
	if (e[c]!=b[c]):
		elif (e[c]==11) and (b[c]==33) or (e[c]==22) and (b[c]==11) or (e[c]==33) and (b[c]==22):
			r=r+1
		elif (b[c]==11) and (e[c]==33) or (b[c]==22) and (e[c]==11) or (b[c]==33) and (e[c]==22):
			w=w+1
	c=c+1
if (r>w):
	print(c)
	print("EUSAPIA")
elif (r==w):
	print(c)
	print("EMPATE")
else:
	print (c)
	print ("BARSANULFO")
	
-- ERROR:
File "XXXX", line 11
    elif (e[c]==11) and (b[c]==33) or (e[c]==22) and (b[c]==11) or (e[c]==33) and (b[c]==22):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:12:56) 
-- CODE:
from numpy import*

c=0 #posicaodosvetores
r=0 #vitoriadaeusapia
w=0 #vitoriasdebarsanulfo
e= array(eval(input()))
b= array(eval(input()))

while (c< size(e)):
	if (e[c]!=b[c]):
		if (e[c]==11) and (b[c]==33) or (e[c]==22) and (b[c]==11) or (e[c]==33) and (b[c]==22):
			r=r+1
		elif (b[c]==11) and (e[c]==33) or (b[c]==22) and (e[c]==11) or (b[c]==33) and (e[c]==22):
			w=w+1
	c=c+1
if (r>w):
	print(c)
	print("EUSAPIA")
elif (r==w):
	print(c)
	print("EMPATE")
else:
	print (c)
	print ("BARSANULFO")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:13:25) 
-- CODE:
from numpy import*

c=0 #posicaodosvetores
r=0 #vitoriadaeusapia
w=0 #vitoriasdebarsanulfo
e= array(eval(input()))
b= array(eval(input()))

while (c< size(e)):
	if (e[c]!=b[c]):
		if (e[c]==11) and (b[c]==33) or (e[c]==22) and (b[c]==11) or (e[c]==33) and (b[c]==22):
			r=r+1
		elif (b[c]==11) and (e[c]==33) or (b[c]==22) and (e[c]==11) or (b[c]==33) and (e[c]==22):
			w=w+1
	c=c+1
if (r>w):
	print(c)
	print("EUSAPIA")
elif (r==w):
	print(c)
	print("EMPATE")
else:
	print (c)
	print ("BARSANULFO")
	
-- EXECUTION TIME:
0.56706
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:19:04) 
-- CODE:
from numpy import*

c=0 #posicaodosvetores
r=0 #vitoriadaeusapia
w=0 #vitoriasdebarsanulfo
e= array(eval(input()))
b= array(eval(input()))

while (c< size(e)):
	if (e[c]!=b[c]):
		if (e[c]==11) and (b[c]==33) or (e[c]==22) and (b[c]==11) or (e[c]==33) and (b[c]==22):
			r=r+1
		elif (b[c]==11) and (e[c]==33) or (b[c]==22) and (e[c]==11) or (b[c]==33) and (e[c]==22):
			w=w+1
	c=c+1
if (r>w):
	print(c)
	print("EUSAPIA")
elif (r==w):
	print(c)
	print("EMPATE")
else:
	print (c)
	print ("BARSANULFO")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
